# KOFFER

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  pr.yml
benches/: README.md
crates/base/: Cargo.toml
crates/base/src/: bytes.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: bytes.rs
crates/conformance/: Cargo.toml
crates/conformance/src/: lib.rs
crates/conformance/tests/: lms.rs  mldsa.rs  mlkem.rs
crates/crypto/: Cargo.toml
crates/crypto/benches/: ct_decap.rs
crates/crypto/examples/: ct_decap.rs
crates/crypto/src/: aead.rs  alg.rs  error.rs  hybrid.rs  kat.rs  kdf.rs  kem.rs  lib.rs  lms.rs  mldsa.rs  mlkem.rs  mock.rs  profile.rs  seal.rs  sign.rs  x25519.rs
crates/cryptography/: Cargo.toml
crates/cryptography/examples/: ct_decap.rs
crates/cryptography/src/: aead.rs  alg.rs  error.rs  hybrid.rs  kdf.rs  kem.rs  lib.rs  lms.rs  mlkem.rs  seal.rs  sign.rs
crates/demo/: Cargo.toml
crates/demo/src/: lib.rs  main.rs  run.rs  seal.rs  sign.rs
crates/demo/tests/: end_to_end.rs
crates/demonstration/: Cargo.toml
crates/demonstration/src/: main.rs  seal.rs  sign.rs
crates/demonstration/tests/: end_to_end.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/difftest/: Cargo.toml  build.rs
crates/difftest/src/: lib.rs
crates/difftest/tests/: lms.rs  mldsa.rs  mlkem.rs
crates/proto/: Cargo.toml
crates/proto/src/: alg.rs  ascii.rs  bytes.rs  codec.rs  cose.rs  digest.rs  error.rs  frame.rs  lib.rs  manifest.rs  message.rs  testutil.rs
crates/testutil/: Cargo.toml
crates/testutil/src/: lib.rs
crates/wire/: Cargo.toml
crates/wire/src/: ascii.rs  bytes.rs  codec.rs  digest.rs  frame.rs  lib.rs  message.rs
docs/: README.md  demo.md
fuzz/: README.md
kat/: README.md
kat/aead/: cavp-aes-256-gcm.kat  rfc8439-chacha20-poly1305.kat
kat/hybrid/: self-consistency-1024.kat  self-consistency-768.kat
kat/kdf/: rfc5869-hkdf-sha256.kat  wycheproof-hkdf-sha384.kat
kat/lms/: rfc8554-tc1.kat  rfc8554-tc2.kat
kat/mldsa/: wycheproof-sign-65.kat  wycheproof-sign-87.kat  wycheproof-verify-65.kat  wycheproof-verify-87.kat
kat/mlkem/: wycheproof-1024.kat  wycheproof-768.kat
kat/seal/: self-consistency-1024.kat  self-consistency-768.kat
