[workspace]
resolver = "3"
members = ["crates/base", "crates/proto", "crates/crypto", "crates/difftest", "crates/demo"]

[workspace.package]
edition = "2024"
rust-version = "1.96"
repository = "https://github.com/hwang-fu/KOFFER"

# Optimize only the crypto crates that run hot in tests: the hash primitives, the
# hash-based-signature backend, and the lattice signature/KEM backends do heavy per-operation
# work that is unbearably slow unoptimized. Everything else (proptest, proc-macros, CBOR,
# ...) stays at the default dev opt-level so it compiles fast and the cached target stays small.
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.sha3]
opt-level = 3
[profile.dev.package.keccak]
opt-level = 3
[profile.dev.package.digest]
opt-level = 3
[profile.dev.package.block-buffer]
opt-level = 3
[profile.dev.package.crypto-common]
opt-level = 3
[profile.dev.package.generic-array]
opt-level = 3
[profile.dev.package.tinyvec]
opt-level = 3
[profile.dev.package.hbs-lms]
opt-level = 3
[profile.dev.package.ml-dsa]
opt-level = 3
[profile.dev.package.module-lattice]
opt-level = 3
[profile.dev.package.shake]
opt-level = 3
[profile.dev.package.hybrid-array]
opt-level = 3
[profile.dev.package.ml-kem]
opt-level = 3
