[workspace]
resolver = "3"
members = ["crates/base", "crates/proto", "crates/crypto", "crates/difftest", "crates/demo"]

[workspace.package]
edition = "2024"
rust-version = "1.96"
repository = "https://github.com/hwang-fu/KOFFER"

# Bump only the crates whose unoptimized runtime makes tests crawl: the hash primitives, the
# hash-based-signature backend, and the lattice signature/KEM backends do heavy per-operation
# math. The rest (proptest, proc-macros, CBOR, ...) are not runtime-hot, so optimizing them
# would not speed the tests in any meaningful way -- it would only slow the build, for no gain.
# Dev-only: release optimizes every crate regardless, so none of this affects the firmware.
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.hbs-lms]
opt-level = 3
[profile.dev.package.ml-dsa]
opt-level = 3
[profile.dev.package.ml-kem]
opt-level = 3

# Thin LTO for release builds: cross-crate inlining and dead-code elimination, mainly to
# shrink and speed the embedded firmware. Thin keeps the compile fast and parallel.
[profile.release]
lto = "thin"
