[package]
name = "koffer-base"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
heapless = { version = "0.9.3", default-features = false }
subtle = { version = "2.6.1", default-features = false }
zeroize = { version = "1.9.0", default-features = false }
