[package]
name = "koffer-crypto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
std = ["alloc"]
alloc = []

[dependencies]
base = { package = "koffer-base", path = "../base" }
hbs-lms = "0.1.1"
rand_core = { version = "0.6.4", default-features = false }
zeroize = { version = "1.9.0", default-features = false }
