[package]
name = "koffer-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
crypto = { version = "0.1.0", path = "../crypto", package = "koffer-crypto", features = ["std"] }
ml-dsa = { version = "0.1.1", default-features = false }
proto = { version = "0.1.0", path = "../proto", package = "koffer-proto", features = ["std"] }
