[package]
name = "koffer-difftest"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
crypto = { version = "0.1.0", path = "../crypto", package = "koffer-crypto", features = ["std"] }
ml-dsa = { version = "0.1.1", default-features = false }
oqs = { version = "0.11.0", default-features = false, features = ["std", "ml_dsa"] }

[dev-dependencies]
proptest = "1.11.0"
