[package]
name = "koffer-proto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
std = ["alloc"]
alloc = ["minicbor/alloc"]

[dependencies]
base = { package = "koffer-base", path = "../base" }
heapless = { version = "0.9.3", default-features = false }
minicbor = { version = "2.2.2", default-features = false, features = ["derive"] }

[dev-dependencies]
proptest = { version = "1.11.0", default-features = false, features = ["std", "bit-set", "regex-syntax"] }
